# multinodeDSE

./: README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
dummy.abc.nodes.DSE/: .project
dummy.abc.nodes.DSE/Algo/genuine/: abc_genuine.diagram  abc_genuine.pi  abc_genuine_scape.diagram  abc_genuine_scape.pi
dummy.abc.nodes.DSE/Algo/subs_init/: sub0_init.diagram  sub0_init.pi  sub0_noOut.pi  sub1_init.diagram  sub1_init.pi  sub1_noOut.diagram  sub2_init.diagram  sub2_init.pi
dummy.abc.nodes.DSE/Algo/top_init/: abc_top.diagram  abc_top.pi
dummy.abc.nodes.DSE/Archi/: Node0.slam  Node2.slam  top.layout  top.slam
dummy.abc.nodes.DSE/Code/: CMakeLists.txt
dummy.abc.nodes.DSE/Code/generated_init/sub0/: Core0.c  Core1.c  Core2.c
dummy.abc.nodes.DSE/Code/generated_init/sub1/: Core1.c  Core2.c  Core3.c  Core4.c  Core5.c
dummy.abc.nodes.DSE/Code/generated_init/sub2/: Core1.c  Core2.c  Core3.c  Core4.c  Core5.c
dummy.abc.nodes.DSE/Code/generated_init/top/: sub0.c  sub1.c  sub1.h  sub2.h
dummy.abc.nodes.DSE/Code/generated_update/: main.c
dummy.abc.nodes.DSE/Code/generated_update/sub0/: Core3.c
dummy.abc.nodes.DSE/Code/generated_update/sub1/: Core0.c
dummy.abc.nodes.DSE/Code/generated_update/sub2/: Core0.c
dummy.abc.nodes.DSE/Code/generated_update/top/: sub0.h  sub2.c
dummy.abc.nodes.DSE/Code/include/: code.h
dummy.abc.nodes.DSE/Code/src/: code.c
dummy.abc.nodes.DSE/Workflows/: Node_partitioner.layout  Node_partitioner.workflow  Thread_partitioner.layout  Thread_partitioner.workflow  Thread_readjustement.layout  Thread_readjustement.workflow  sim_formater.layout  sim_formater.workflow
(+11 files in other folders)
